--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
 PORT=5000
 MONGODB_URI=mongodb://127.0.0.1:27017/ai_interview_platform
+MONGO_IP_FAMILY=4
 MONGO_AUTOSTART_LOCAL=true
 MONGO_BIN_PATH=C:\Program Files\MongoDB\Server\8.2\bin\mongod.exe
 MONGO_LOCAL_DATA_DIR=
